Add runnable MAUI desktop host
